<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Logo -->
        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="170dp"
            android:layout_height="53dp"
            android:contentDescription="Logo"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Título -->
        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/playfair_display_bold"
            android:gravity="center"
            android:text="@string/txvEditEvento"
            android:textColor="@color/peruvian_wine"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgLogo" />

        <!-- NOMBRE -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNombre"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/txvNombreEE"
            app:boxStrokeColor="@color/peruvian_wine"
            app:layout_constraintTop_toBottomOf="@id/tvTitulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNombreEE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@string/txtNombreEE"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- DNI -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDNI"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/txvDniEE"
            app:boxStrokeColor="@color/peruvian_wine"
            app:layout_constraintTop_toBottomOf="@id/tilNombre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txnDniEE"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Celular -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCelular"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/txvTelefEE"
            app:boxStrokeColor="@color/peruvian_wine"
            app:layout_constraintTop_toBottomOf="@id/tilDNI"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNumber2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txnTelefonoEE"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Descripción -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescripcion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/txvDescripcionEE"
            app:boxStrokeColor="@color/peruvian_wine"
            app:layout_constraintTop_toBottomOf="@id/tilCelular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtDescripcionEE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtDescripcionEE"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Fecha -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFecha"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/txvFechaEE"
            app:boxStrokeColor="@color/peruvian_wine"
            app:layout_constraintTop_toBottomOf="@id/tilDescripcion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtFechaEE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtFechaEE"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Hora -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilHora"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/txvHoraEE"
            app:boxStrokeColor="@color/peruvian_wine"
            app:layout_constraintTop_toBottomOf="@id/tilFecha"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtHoraEE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtHoraEE"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Ubicación -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUbicacion"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/txvUbiEE"
            app:boxStrokeColor="@color/peruvian_wine"
            app:layout_constraintTop_toBottomOf="@id/tilHora"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtUbiEE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtUbiEE"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Tipo -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTipo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/txvTipoEE"
            app:boxStrokeColor="@color/peruvian_wine"
            app:layout_constraintTop_toBottomOf="@id/tilUbicacion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtTipoEE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtTipoEE"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Invitados -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilInvitados"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/txvInvitadosEE"
            app:boxStrokeColor="@color/peruvian_wine"
            app:layout_constraintTop_toBottomOf="@id/tilTipo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txnInvitadosEE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txnInvitadosEE"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botones -->
        <LinearLayout
            android:id="@+id/layoutBotones"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilInvitados">

            <Button
                android:id="@+id/btnRegresarEE"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/btnRegresarRP2"
                android:text="@string/btnRegresararEE"
                android:textColor="@color/peruvian_wine" />

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnSiguienteEE"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/btnRegistrarRP2"
                android:text="@string/btnSiguienteEE"
                android:textColor="@color/white" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>